tests/rosetta/out/Java/align-columns.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/align-columns.mochi:24:25: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/align-columns.mochi:24:25

 24 |   while n > 0 && words[n-1] == "" {
    |                         ^

help:
  Parse error occurred. Check syntax near this location.